# karaoke-maker

./: README.md
mkcdg/: CMakeLists.txt  README.md
mkcdg/cmake/: FindFontconfig.cmake
mkcdg/include/: background.h  block.h  cdggenerator.h  color.h  commonattributes.h  font.h  image.h  line.h  lyrics.h  lyricsevents.h  lyricsrenderer.h  mytextrenderer.h  syllable.h  textrenderer.h  track.h  util.h  word.h  xmllyrics.h
mkcdg/src/: background.cpp  block.cpp  cdggenerator.cpp  commonattributes.cpp  hftest.cpp  image.cpp  line.cpp  lyrics.cpp  lyricsevents.cpp  lyricsrenderer.cpp  main.cpp  mytextrenderer.cpp  syllable.cpp  textrenderer.cpp  track.cpp  word.cpp  xmllyrics.cpp  xmltest.cpp
mklyrics/: README.md  mklyrics.py  requirements.txt
